fixed login display on mobile version

--- a/myCSS/style.css
+++ b/myCSS/style.css
@@ -161,8 +161,15 @@ dl, ol, ul {
     display: none;
 }
 
+
 #usernameLogin {
     margin-right: 5px;
+}
+
+@media only screen and (max-width: 700px) {
+    #usernameLogin {
+        margin-right: 0px;
+    }
 }
 
 .nottodayButton {
